--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     
     <div class="container text-center py-4">
         <img src="arnest-logo.png"
-            width="400"
-            height="">
+            width="300"
+            height="300">
     </div>
 
     <div class="container test-panel">
