--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <div class="container text-center">
-        <button id="btn-start" class="btn btn-light btn-lg px-5 py-3 mb-3 shadow">📷 НАЧАТЬ СКАНИРОВАНИЕ</button>
+        <button id="btn-start" class="btn btn-light btn-lg px-5 py-3 mb-3 shadow">НАЧАТЬ СКАНИРОВАНИЕ</button>
         
         <div id="scanner-container">
             <video id="camera" autoplay playsinline muted></video>
@@ -37,7 +37,7 @@
             <div class="debug-overlay" id="debug-overlay">Ожидание...</div>
         </div>
         
-        <button id="btn-stop" class="btn btn-danger btn-lg px-5 py-3 shadow" style="display:none;">⏹ ОСТАНОВИТЬ</button>
+        <button id="btn-stop" class="btn btn-danger btn-lg px-5 py-3 shadow" style="display:none;">ОСТАНОВИТЬ</button>
     </div>
 
     <div id="result-card" class="result-card card">
