change products for scanning

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     
     <script>
         const productsDB = {
-            "4601234567890": { name: "Шампунь 'Нежный уход'", inci: ["Aqua", "Sodium Laureth Sulfate", "Cocamidopropyl Betaine", "Parfum", "Limonene"], safety: "yellow", text: "Содержит аллергены: Limonene" },
-            "4607890123456": { name: "Гель для душа 'Безопасный'", inci: ["Aqua", "Glycerin", "Coco-Glucoside", "Aloe Barbadensis"], safety: "green", text: "Безопасно для чувствительной кожи" },
-            "4601112233445": { name: "Мыло детское 'Ультра'", inci: ["Sodium Palmate", "Parfum", "Methylisothiazolinone", "Limonene", "Linalool"], safety: "red", text: "Высокий риск аллергии!" }
+            "4604852006683": { name: "Парфюмированный спрей", inci: ["Aqua", "Sodium Laureth Sulfate", "Cocamidopropyl Betaine", "Parfum", "Limonene"], safety: "yellow", text: "Содержит аллергены: Limonene" },
+            "3600542597760": { name: "Солнцезащитный сухой спрей'", inci: ["Aqua", "Glycerin", "Coco-Glucoside", "Aloe Barbadensis"], safety: "green", text: "Безопасно для чувствительной кожи" },
+            "4631165948799": { name: "Сыворотка с салициловой кислотой", inci: ["Sodium Palmate", "Parfum", "Methylisothiazolinone", "Limonene", "Linalool"], safety: "red", text: "Высокий риск аллергии!" }
         };
 
         const btnStart = document.getElementById('btn-start');
